--- a/jour2/01-rappel.html
+++ b/jour2/01-rappel.html
@@ -165,11 +165,15 @@
         {id : 3 , titre : "le conte de Montecristo " , publie : 1910 , auteur : {prenom : Alexandre  , nom : Dumas }},
     ]
 
-    // donner la liste de tous  les livres écrits AVANT 1910
+    // 1 donner la liste de tous  les livres écrits AVANT 1910
 
-    // donner la liste de tous les livres écrit pas victor hugo 
+    // 2 donner la liste de tous les livres écrit pas victor hugo 
 
-    // écrire la phrase suivante dans la console "le conte de Montecristo a été publié en 1910"
+    // 3 écrire la phrase suivante dans la console "le conte de Montecristo a été publié en 1910"
 
-    // compter le nombre de livre publié après 1880 
+    // 4 compter le nombre de livre publié après 1880 
+
+    // 5 vous devez modifier le nom de tous les livres en les mettant en MAJUSCULE
+
+    // https://github.com/webdevproformation/react-b3-janv2023
 -->
