rappel asynchrone et promise et erreur

--- a/jour4/02-callback.html
+++ b/jour4/02-callback.html
@@ -49,6 +49,18 @@
         getCPromise().then((c) => {
             console.log(c + d); 
         }).catch()
+
+        // class Promise{
+              /*   constructor(callback){
+
+                } */
+        //}
+        
+
+        axios.post("url")
+        // requête ajax => temps avant d'avoir réponse du serveur
+            .then(() => {}) 
+            .catch(() => {})
     </script>
 </body>
 </html>
